# trac_ik_lib_standalone

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: docker-image.yml
examples/: CMakeLists.txt  panda_robot.cpp
include/trac_ik/: kdl_tl.hpp  nlopt_ik.hpp  trac_ik.hpp
src/: kdl_tl.cpp  nlopt_ik.cpp  trac_ik.cpp
